objects/tffa__FinancialAccount__c.object
<CustomObject>
    <description>A bank account can be a deposit account, a credit card account, a current account, or any other type of account offered by a financial institution, and represents the funds that a customer has entrusted to the financial institution and from which the customer can make withdrawals. Alternatively, accounts may be loan accounts in which case the customer owes money to the financial institution.</description>
    <fields>
        <fullName>tffa__APY__c</fullName>
        <description>Annual Percentage Yield of account</description>
        <label>Annual Percentage Yield</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__AccountNumber__c</fullName>
        <description>ID that uniquely identifies the financial account in an core banking</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__AccountTitle__c</fullName>
        <description>The title of the financial account. Typically this is a name of the account owners</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount balance of the account</description>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__BicCode__c</fullName>
        <description>BIC stands for Bank Identifier Code. It is an international bank code that identifies particular banks worldwide.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CloseDate__c</fullName>
        <description>Date on which account was closed in the core system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__CreditLimit__c</fullName>
        <description>Total amount of credit limit of the lending financial account</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A longer description of the account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitution__c</fullName>
        <description>Name of the financial institution in which account is held, in case of a held away account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__HeldAway__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if financial account is held outside the bank</description>
        <label>Held Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCode__c</fullName>
        <description>Unique code of the current geographical location/branch</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location(Branch) code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current geographical location/branch of the financial account. This will be computed and be useful for regulations.</description>
        <label>Location(Branch)</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>FinancialAccounts</relationshipLabel>
        <relationshipName>FinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__MaskedAccountNumber__c</fullName>
        <description>Last 4 digits of account numner for display purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Number (masked)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MaturityDate__c</fullName>
        <description>The maturity date of a Certificate or Lending accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Maturity date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__NickName__c</fullName>
        <description>A familiar name given to a financial account. Can be used in communication mechanisms.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nick name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OpenDate__c</fullName>
        <description>Date on which account was opened into the core system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmail__c</fullName>
        <description>Primary email of the account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhone__c</fullName>
        <description>Primary phone number of the account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Different product category supported by system. This classifies the flow of account opening , the underlying data model and the servicing components about an account.</description>
        <label>Product Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCode__c</fullName>
        <description>Unique product code maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProductName__c</fullName>
        <description>Product name provided by core banking</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product code identifier.</description>
        <label>Financial Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not valid.</errorMessage>
            <filterItems>
                <field>$Source.tffa__ProductCategory__c</field>
                <operation>equals</operation>
                <valueField>tffa__Product__c.tffa__Category__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Rate__c</fullName>
        <description>Value of the interest rate for current lending application</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RoutingNumber__c</fullName>
        <description>Routing number of the account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SecondaryEmail__c</fullName>
        <description>Secondary email of the party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SecondaryPhone__c</fullName>
        <description>Secondary phone of the party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemToken__c</fullName>
        <description>Holds encrypted value of Access token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Access token(Encrypted)</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this account if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <defaultValue>&quot;Init&quot;</defaultValue>
        <description>The stage of the account in context of the product applied. This will be different for each product and is more granular than the status field.This field will be updated on the state transition the application in the origination workflow.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Indicates current status of the account</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FinancialAccountStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Term__c</fullName>
        <description>Total term captured for the current certificate application</description>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>tffa__BUSINESS_CERTIFICATE</fullName>
        <active>true</active>
        <description>A certificate of deposit (CD) is a savings certificate with a fixed maturity date and specified fixed interest rate</description>
        <label>Business Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_CHECKING</fullName>
        <active>true</active>
        <description>A checking account is a deposit account held at a financial institution that allows withdrawals and deposits using checks, ATM and electronic debits, among other methods</description>
        <label>Business Checking</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_CREDIT_CARD</fullName>
        <active>true</active>
        <description>A credit card is a card issued by a financial instituition which enables the business  to borrow funds.</description>
        <label>Business Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_IRA</fullName>
        <active>true</active>
        <description>Business IRA is a type of Traditional IRA for self-employed people or small business owners. A small business owner with one employee or more, or anyone with a freelance income can open a business IRA.</description>
        <label>Businesss retirement account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_LINE_OF_CREDIT</fullName>
        <active>true</active>
        <description>A business line of credit provides flexibility that a regular business loan doesn’t. With a business line of credit, you can borrow up to a certain limit  and pay interest only on the portion of money that you borrow.</description>
        <label>Business Line of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_MONEY_MARKET</fullName>
        <active>true</active>
        <description>A money market account is an interest-bearing account. money market accounts pay a higher interest rate than regular passbook savings accounts and often include checkwriting and debit card privileges</description>
        <label>Business Money Market</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_REALESTATE_LOAN</fullName>
        <active>true</active>
        <description>A commercial real estate loan is a mortgage secured by a lien on commercial property as opposed to residential property</description>
        <label>Business Real Estate Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_SAVINGS</fullName>
        <active>true</active>
        <description>A savings account is an interest-bearing deposit account held at a financial institution that  limit the number of withdrawals</description>
        <label>Business Savings</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_TERM_LOAN</fullName>
        <active>true</active>
        <description>A traditional business term loan is a lump sum of capital that you pay back with regular repayments at a fixed interest rate. Most business owners use the proceeds of term loans to finance a specific, one-off investment for their small business.</description>
        <label>Business Term Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CERTIFICATE</fullName>
        <active>true</active>
        <description>A certificate of deposit (CD) is a savings certificate with a fixed maturity date and specified fixed interest rate</description>
        <label>Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CHECKING</fullName>
        <active>true</active>
        <description>A checking account is a deposit account held at a financial institution that allows withdrawals and deposits using checks, ATM and electronic debits, among other methods</description>
        <label>Checking</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CREDIT_CARD</fullName>
        <active>true</active>
        <description>A credit card is a card issued by a financial instituition which enables the cardholder to borrow funds.</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CRYPTO_CUSTODIAL</fullName>
        <active>true</active>
        <description>An account which allows buying/selling cryptocurrency via a custodian (e.g. NYDIG).</description>
        <label>Crypto Custodial</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__EDUCATION_LOAN</fullName>
        <active>true</active>
        <description>An education loan is money borrowed to finance education or school related expenses. Payments are often deferred while in school and for a six-month grace period after graduation</description>
        <label>Education Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__ESA</fullName>
        <active>true</active>
        <description>A Coverdell education savings account (also known as an education savings account, a Coverdell ESA, a Coverdell account, or just an ESA, and formerly known as an education individual retirement account), is a tax-advantaged investment account in the U.S</description>
        <label>Education savings account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__HELOC</fullName>
        <active>true</active>
        <description>A home equity line of credit (HELOC) is a loan in which the lender agrees to lend a maximum amount within an agreed period, where the collateral is the borrowers equity in his/her house (similar to a second mortgage)</description>
        <label>Home Equity Line of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__HSA</fullName>
        <active>true</active>
        <description>A Health Savings Account (HSA) is a tax-advantaged account created for individuals who are covered under high-deductible health plans (HDHPs) to save for medical expenses that HDHPs do not cover.</description>
        <label>Health savings account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__IRA</fullName>
        <active>true</active>
        <description>An individual retirement account (IRA) is a tax-advantaged investing tool that individuals use to earmark funds for retirement savings</description>
        <label>Individual retirement account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__MONEY_MARKET</fullName>
        <active>true</active>
        <description>A money market account is an interest-bearing account. money market accounts pay a higher interest rate than regular passbook savings accounts and often include checkwriting and debit card privileges</description>
        <label>Money Market</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__MORTGAGE</fullName>
        <active>true</active>
        <description>A mortgage is a debt instrument, secured by the collateral of specified real estate property, that the borrower is obliged to pay back with a predetermined set of payments</description>
        <label>Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__PERSONAL_LINE_OF_CREDIT</fullName>
        <active>true</active>
        <description>A line of credit (LOC ) is preset borrowing limit that can be used at any time. The borrower can take money out as needed until the limit is reached.</description>
        <label>Personal Line of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__PERSONAL_LOAN</fullName>
        <active>true</active>
        <description>An unsecured loan is a loan that is issued and supported only by the borrower&apos;s creditworthiness</description>
        <label>Personal Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__SAVINGS</fullName>
        <active>true</active>
        <description>A savings account is an interest-bearing deposit account held at a financial institution that  limit the number of withdrawals</description>
        <label>Savings</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__SBA_LOAN</fullName>
        <active>true</active>
        <description>SBA loans are business loans guaranteed by the Small Business Administration.SBA loan programs let you borrow money for working capital, purchasing inventory or equipment, refinancing other debts, or buying real estate—through these SBA-guaranteed loans.</description>
        <label>SBA Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__VEHICLE_LOAN</fullName>
        <active>true</active>
        <description>A vehicle loan  is a short-term loan in which the borrower&apos;s vehicle  title is used as collateral</description>
        <label>Vehicle Loan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>